--- a/java-annotations/java-annotations-definition/pom.xml
+++ b/java-annotations/java-annotations-definition/pom.xml
@@ -19,14 +19,24 @@
     limitations under the License.
 -->
     <parent>
-        <artifactId>java-annotations</artifactId>
         <groupId>fr.openobject.blog.tutorial</groupId>
-        <version>1.0.0</version>
+        <artifactId>java-annotations</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>java-annotations-defintion</artifactId>
     <name>Kamino :: Blog :: Tutorial :: Java Annotations :: Definition</name>
-    <packaging>bundle</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgument>-proc:none</compilerArgument>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
