--- a/java-annotations/java-annotations-usage/pom.xml
+++ b/java-annotations/java-annotations-usage/pom.xml
@@ -19,15 +19,15 @@
     limitations under the License.
 -->
     <parent>
-        <artifactId>java-annotations</artifactId>
         <groupId>fr.openobject.blog.tutorial</groupId>
-        <version>1.0.0</version>
+        <artifactId>java-annotations</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>fr.openobject.blog.tutorial</groupId>
     <artifactId>java-annotations-usage</artifactId>
     <name>Kamino :: Blog :: Tutorial :: Java Annotations :: Usage</name>
-    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
@@ -36,4 +36,36 @@
             <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgument>-proc:none</compilerArgument>
+                    <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>fr.openobject.blog.tutorial.java.annotations.usage.AnnotationTest</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
