--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,9 @@
     <name>Kamino :: Blog :: Tutorial</name>
 
     <properties>
-        <osgi.version>6.0.0</osgi.version>
-        <osgi.compendium.version>6.0.0</osgi.compendium.version>
-        <osgi.enterprise.version>5.0.0</osgi.enterprise.version>
-
+        <osgi.version>7.0.0</osgi.version>
+        <osgi.compendium.version>7.0.0</osgi.compendium.version>
+        <osgi.enterprise.version>6.0.0</osgi.enterprise.version>
         <slf4j.version>1.7.28</slf4j.version>
         <junit.version>5.5.2</junit.version>
         <surefire.log.level>INFO</surefire.log.level>
@@ -81,6 +80,8 @@
 
     <modules>
         <module>java-annotations</module>
+        <module>ignite</module>
+        <module>cdi</module>
     </modules>
 
     <dependencyManagement>
