--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
         Licensed to the Apache Software Foundation (ASF) under one or more
         contributor license agreements.  See the NOTICE file distributed with
         this work for additional information regarding copyright ownership.
-        The xxx licenses this file to You under the Apache License, Version 2.0
+        The ASF licenses this file to You under the Apache License, Version 2.0
         (the "License"); you may not use this file except in compliance with
         the License.  You may obtain a copy of the License at
 
@@ -31,9 +31,6 @@
     <name>Kamino :: Blog :: Tutorial</name>
 
     <properties>
-        <osgi.version>7.0.0</osgi.version>
-        <osgi.compendium.version>7.0.0</osgi.compendium.version>
-        <osgi.enterprise.version>6.0.0</osgi.enterprise.version>
         <slf4j.version>1.7.28</slf4j.version>
         <junit.version>5.5.2</junit.version>
         <surefire.log.level>INFO</surefire.log.level>
@@ -79,9 +76,9 @@
     </scm>
 
     <modules>
-        <module>java-annotations</module>
         <module>ignite</module>
         <module>cdi</module>
+        <module>karaf-custom-distribution</module>
     </modules>
 
     <dependencyManagement>
@@ -202,7 +199,7 @@
                                     <version>[3.5,4)</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>[1.8,)</version>
+                                    <version>[11,)</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
@@ -211,41 +208,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>spotless</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.diffplug.spotless</groupId>
-                        <artifactId>spotless-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>spotless</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <java>
-                                <googleJavaFormat>
-                                    <version>1.6</version>
-                                    <style>AOSP</style>
-                                </googleJavaFormat>
-                                <removeUnusedImports/>
-                            </java>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
 
