--- a/meecrowave/pom.xml
+++ b/meecrowave/pom.xml
@@ -32,6 +32,7 @@
 
     <properties>
         <meecrowave.version>1.2.9</meecrowave.version>
+        <commons.cli.version>1.4</commons.cli.version>
     </properties>
 
     <dependencies>
@@ -44,6 +45,11 @@
             <groupId>org.apache.meecrowave</groupId>
             <artifactId>meecrowave-core</artifactId>
             <version>${meecrowave.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>${commons.cli.version}</version>
         </dependency>
 
         <dependency>
@@ -87,6 +93,8 @@
                         </auth>
                     </to>
                     <container>
+                        <useCurrentTimestamp>true</useCurrentTimestamp>
+                        <mainClass>org.apache.meecrowave.runner.Cli</mainClass>
                         <entrypoint>
                             <entrypoint>/meecrowave-distribution/bin/meecrowave.sh</entrypoint>
                             <entrypoint>run</entrypoint>
@@ -111,5 +119,40 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>dockerMain</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>1.8.0</version>
+                        <configuration>
+                            <allowInsecureRegistries>true</allowInsecureRegistries>
+                            <from>
+                                <image>adoptopenjdk/openjdk11:alpine-jre</image>
+                            </from>
+                            <to>
+                                <image>fpaponapache.azurecr.io/fpaponapache/meecrowave-custom-distrib:${project.version}</image>
+                                <auth>
+                                    <username>fpaponapache</username>
+                                    <password></password>
+                                </auth>
+                            </to>
+                            <container>
+                                <useCurrentTimestamp>true</useCurrentTimestamp>
+                                <mainClass>org.apache.meecrowave.runner.Cli</mainClass>
+                                <ports>
+                                    <port>8080</port>
+                                </ports>
+                            </container>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
