--- a/karaf-microservices/runtime/pom.xml
+++ b/karaf-microservices/runtime/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>features</module>
         <module>distribution</module>
+        <module>server</module>
     </modules>
 
 </project>
