--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <module>meecrowave</module>
         <module>http-proxy</module>
         <module>tomcat-docker</module>
+        <module>microprofile</module>
     </modules>
 
     <dependencyManagement>
