--- a/meecrowave/pom.xml
+++ b/meecrowave/pom.xml
@@ -33,6 +33,8 @@
     <properties>
         <meecrowave.version>1.2.9</meecrowave.version>
         <commons.cli.version>1.4</commons.cli.version>
+        <microprofile-config-api.version>1.3</microprofile-config-api.version>
+        <geronimo-config.version>1.2.2</geronimo-config.version>
     </properties>
 
     <dependencies>
@@ -50,6 +52,18 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>${commons.cli.version}</version>
+        </dependency>
+
+        <!-- Microprofile Config -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+            <version>${microprofile-config-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.config</groupId>
+            <artifactId>geronimo-config-impl</artifactId>
+            <version>${geronimo-config.version}</version>
         </dependency>
 
         <dependency>
