--- a/meecrowave/pom.xml
+++ b/meecrowave/pom.xml
@@ -35,6 +35,12 @@
         <commons.cli.version>1.4</commons.cli.version>
         <microprofile-config-api.version>1.3</microprofile-config-api.version>
         <geronimo-config.version>1.2.2</geronimo-config.version>
+        <microprofile-health-api.version>2.0.1</microprofile-health-api.version>
+        <geronimo-health.version>1.0.2</geronimo-health.version>
+        <geronimo-metrics-api.version>1.1.1</geronimo-metrics-api.version>
+        <geronimo-metrics.version>1.0.3</geronimo-metrics.version>
+        <geronimo-openapi-api.version>1.1.2</geronimo-openapi-api.version>
+        <geronimo-openapi.version>1.0.11</geronimo-openapi.version>
     </properties>
 
     <dependencies>
@@ -66,6 +72,43 @@
             <version>${geronimo-config.version}</version>
         </dependency>
 
+        <!-- Microprofile Health -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.health</groupId>
+            <artifactId>microprofile-health-api</artifactId>
+            <version>${microprofile-health-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo</groupId>
+            <artifactId>geronimo-health</artifactId>
+            <version>${geronimo-health.version}</version>
+        </dependency>
+
+        <!-- Microprofile Metrics -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.metrics</groupId>
+            <artifactId>microprofile-metrics-api</artifactId>
+            <version>${geronimo-metrics-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo</groupId>
+            <artifactId>geronimo-metrics</artifactId>
+            <version>${geronimo-metrics.version}</version>
+        </dependency>
+
+        <!-- Microprofile OpenAPI -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.openapi</groupId>
+            <artifactId>microprofile-openapi-api</artifactId>
+            <version>${geronimo-openapi-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo</groupId>
+            <artifactId>geronimo-openapi-impl</artifactId>
+            <version>${geronimo-openapi.version}</version>
+        </dependency>
+
+        <!-- Tests -->
         <dependency>
             <groupId>org.apache.meecrowave</groupId>
             <artifactId>meecrowave-junit</artifactId>
