--- a/karaf-custom-distribution/pom.xml
+++ b/karaf-custom-distribution/pom.xml
@@ -29,7 +29,6 @@
 
     <artifactId>karaf-custom-distribution</artifactId>
     <name>Kamino :: Blog :: Tutorial :: Karaf :: Custom distribution</name>
-    <packaging>karaf-assembly</packaging>
 
     <properties>
         <karaf.runtime.version>4.3.0.RC1</karaf.runtime.version>
@@ -79,7 +78,16 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
-                <extensions>true</extensions>
+                <extensions>false</extensions>
+                <executions>
+                    <execution>
+                        <id>package</id>
+                        <goals>
+                            <goal>assembly</goal>
+                            <goal>archive</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <bootFeatures>
@@ -110,8 +118,8 @@
                     <startupFeatures>
                         <feature>eventadmin</feature>
                     </startupFeatures>
-                    <archiveTarGz>false</archiveTarGz>
-                    <archiveZip>false</archiveZip>
+                    <archiveTarGz>true</archiveTarGz>
+                    <archiveZip>true</archiveZip>
                     <workDirectory>${project.build.directory}/assembly/karaf</workDirectory>
                     <pathPrefix>karaf</pathPrefix>
                     <writeProfiles>true</writeProfiles>
