--- a/karaf-microservices/services/pom.xml
+++ b/karaf-microservices/services/pom.xml
@@ -23,6 +23,7 @@
         <artifactId>karaf-microservices</artifactId>
         <groupId>fr.openobject.blog.tutorial</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
