Add Apache Kafka embedded server for tests

--- a/ignite/pom.xml
+++ b/ignite/pom.xml
@@ -91,6 +91,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <filters>
                                 <filter>
                                     <artifact>org.apache.ignite:*</artifact>
