--- a/http-proxy/pom.xml
+++ b/http-proxy/pom.xml
@@ -61,6 +61,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
