--- a/karaf-microservices/pom.xml
+++ b/karaf-microservices/pom.xml
@@ -29,7 +29,6 @@
     <packaging>pom</packaging>
     <name>Kamino :: Blog :: Tutorial :: Karaf microservices</name>
     <modules>
-        <module>api</module>
         <module>services</module>
         <module>endpoints</module>
         <module>runtime</module>
@@ -40,14 +39,15 @@
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
         <osgi.enterprise.version>6.0.0</osgi.enterprise.version>
 
-        <cxf.version>3.3.6</cxf.version>
         <jackson.version>2.10.0</jackson.version>
         <javax.ws.rs>2.1.1</javax.ws.rs>
         <javax.servlet>3.1.0</javax.servlet>
         <javax.activation>1.2.0</javax.activation>
         <geronimo.jsonspec.version>1.2</geronimo.jsonspec.version>
 
-        <karaf.version>4.2.9</karaf.version>
+        <karaf.version>4.3.0.RC1</karaf.version>
+        <felix.http.version>4.0.20</felix.http.version>
+        <servicemix-spec.version>2.9.0</servicemix-spec.version>
 
         <slf4j-version>1.7.25</slf4j-version>
     </properties>
@@ -63,26 +63,6 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${javax.servlet}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-                <version>${cxf.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-rt-transports-http</artifactId>
-                <version>${cxf.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-rt-rs-security-cors</artifactId>
-                <version>${cxf.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-rt-rs-service-description-openapi-v3</artifactId>
-                <version>${cxf.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -114,7 +94,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>4.2.1</version>
+                    <version>5.1.1</version>
                     <extensions>true</extensions>
                     <inherited>true</inherited>
                 </plugin>
