--- a/karaf-microservices/services/customer/pom.xml
+++ b/karaf-microservices/services/customer/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>api</module>
         <module>impl</module>
+        <module>application</module>
     </modules>
 
 </project>
