Update Karaf-microservices sample

--- a/karaf-microservices/pom.xml
+++ b/karaf-microservices/pom.xml
@@ -30,6 +30,7 @@
     <name>Kamino :: Blog :: Tutorial :: Karaf microservices</name>
     <modules>
         <module>services</module>
+        <module>applications</module>
         <module>endpoints</module>
         <module>runtime</module>
     </modules>
