--- a/karaf-microservices/applications/customer/pom.xml
+++ b/karaf-microservices/applications/customer/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <!--
         Licensed to the Apache Software Foundation (ASF) under one or more
         contributor license agreements.  See the NOTICE file distributed with
@@ -21,20 +20,24 @@
     -->
 
     <parent>
-        <artifactId>karaf-microservices-services</artifactId>
+        <artifactId>karaf-microservices-applications</artifactId>
         <groupId>fr.openobject.blog.tutorial</groupId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>karaf-microservices-services-customer</artifactId>
-    <packaging>pom</packaging>
-    <name>Kamino :: Blog :: Tutorial :: Karaf microservices :: Services :: Customer</name>
+    <artifactId>karaf-microservices-applications-customer</artifactId>
+    <name>Kamino :: Blog :: Tutorial :: Karaf microservices :: Services :: Customer :: Application</name>
+    <packaging>bundle</packaging>
 
-    <modules>
-        <module>api</module>
-        <module>impl</module>
-    </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
