--- a/karaf-microservices/applications/pom.xml
+++ b/karaf-microservices/applications/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <!--
         Licensed to the Apache Software Foundation (ASF) under one or more
         contributor license agreements.  See the NOTICE file distributed with
@@ -20,15 +21,20 @@
     -->
 
     <parent>
-        <artifactId>karaf-microservices-services-customer</artifactId>
+        <artifactId>karaf-microservices</artifactId>
         <groupId>fr.openobject.blog.tutorial</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>karaf-microservices-services-customer-application</artifactId>
-    <name>Kamino :: Blog :: Tutorial :: Karaf microservices :: Services :: Customer :: Application</name>
-    <packaging>bundle</packaging>
+    <artifactId>karaf-microservices-applications</artifactId>
+    <packaging>pom</packaging>
+    <name>Kamino :: Blog :: Tutorial :: Karaf microservices :: Applications</name>
+
+    <modules>
+        <module>customer</module>
+    </modules>
 
     <dependencies>
         <dependency>
@@ -45,12 +51,4 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
