--- a/karaf-custom-distribution/pom.xml
+++ b/karaf-custom-distribution/pom.xml
@@ -31,7 +31,7 @@
     <name>Kamino :: Blog :: Tutorial :: Karaf :: Custom distribution</name>
 
     <properties>
-        <karaf.runtime.version>4.3.0.RC1</karaf.runtime.version>
+        <karaf.runtime.version>4.3.0</karaf.runtime.version>
         <decanter.version>2.2.0</decanter.version>
     </properties>
 
@@ -78,6 +78,7 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
+                <version>4.3.0</version>
                 <extensions>false</extensions>
                 <executions>
                     <execution>
