--- a/meecrowave/pom.xml
+++ b/meecrowave/pom.xml
@@ -42,6 +42,8 @@
         <geronimo-metrics.version>1.0.3</geronimo-metrics.version>
         <geronimo-openapi-api.version>1.1.2</geronimo-openapi-api.version>
         <geronimo-openapi.version>1.0.11</geronimo-openapi.version>
+        <openjpa.version>3.1.2</openjpa.version>
+        <tomcat.version>9.0.41</tomcat.version>
     </properties>
 
     <dependencies>
@@ -56,9 +58,30 @@
             <version>${meecrowave.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.meecrowave</groupId>
+            <artifactId>meecrowave-jpa</artifactId>
+            <version>${meecrowave.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>${commons.cli.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa-all</artifactId>
+            <version>${openjpa.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
 
         <!-- Microprofile Config -->
@@ -121,6 +144,18 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa-junit5</artifactId>
+            <version>${openjpa.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -132,6 +167,47 @@
                 <configuration>
                     <buildDirectory>${project.build.directory}/assembly</buildDirectory>
                     <keepExplodedFolder>true</keepExplodedFolder>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.openjpa</groupId>
+                <artifactId>openjpa-maven-plugin</artifactId>
+                <version>${openjpa.version}</version>
+                <executions>
+                    <execution>
+                        <id>enhancer</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>enhance</goal>
+                        </goals>
+                        <configuration>
+                            <toolProperties>
+                                <MetaDataFactory>jpa</MetaDataFactory>
+                            </toolProperties>
+                        </configuration>
+                    </execution>
+<!--                    <execution>-->
+<!--                        <id>h2</id>-->
+<!--                        <goals>-->
+<!--                            <goal>sql</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>process-classes</phase>-->
+<!--                        <configuration>-->
+<!--                            <sqlFile>${project.build.outputDirectory}/openobject/ddl/database.ddl.h2.sql</sqlFile>-->
+<!--                            <toolProperties>-->
+<!--                                <DBDictionary>org.apache.openjpa.jdbc.sql.H2Dictionary</DBDictionary>-->
+<!--                            </toolProperties>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+                </executions>
+                <configuration>
+                    <includes>fr/openobject/blog/tutorial/meecrowave/persistence/entity/*.class</includes>
+                    <sqlAction>build</sqlAction>
+                    <toolProperties>
+                        <Log>slf4j</Log>
+                        <MappingDefaults>jpa(ForeignKeyDeleteAction=restrict,JoinForeignKeyDeleteAction=restrict)</MappingDefaults>
+                        <MetaDataFactory>jpa</MetaDataFactory>
+                    </toolProperties>
                 </configuration>
             </plugin>
             <plugin>
