--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -32,6 +32,7 @@
 
     <properties>
         <apache.openwebbean.version>2.0.21</apache.openwebbean.version>
+        <apache.geronimo.arthur.version>1.0.2</apache.geronimo.arthur.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,29 @@
             <artifactId>geronimo-annotation_1.3_spec</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.geronimo.arthur.knights</groupId>
+            <artifactId>openwebbeans-knight</artifactId>
+            <version>${apache.geronimo.arthur.version}</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.geronimo.arthur</groupId>
+                <artifactId>arthur-maven-plugin</artifactId>
+                <version>${apache.geronimo.arthur.version}</version>
+                <configuration>
+                    <graalVersion>21.0.0.2.r11</graalVersion>
+                    <main>fr.openobject.blog.tutorial.cdi.CdiApplication</main>
+                    <graalExtensions>
+                        <graalExtension>openwebbeans</graalExtension>
+                    </graalExtensions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
