--- a/karaf-microservices/pom.xml
+++ b/karaf-microservices/pom.xml
@@ -40,13 +40,17 @@
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
         <osgi.enterprise.version>6.0.0</osgi.enterprise.version>
 
-        <jackson.version>2.10.0</jackson.version>
+        <jackson.version>2.12.3</jackson.version>
+        <woodstox.version>6.2.6</woodstox.version>
+        <aries-jaxrs-whiteboard.version>2.0.0</aries-jaxrs-whiteboard.version>
+        <cxf.version>3.4.3</cxf.version>
+
         <javax.ws.rs>2.1.1</javax.ws.rs>
         <javax.servlet>3.1.0</javax.servlet>
         <javax.activation>1.2.0</javax.activation>
         <geronimo.jsonspec.version>1.2</geronimo.jsonspec.version>
 
-        <karaf.version>4.3.0.RC1</karaf.version>
+        <karaf.version>4.3.2</karaf.version>
         <felix.http.version>4.0.20</felix.http.version>
         <servicemix-spec.version>2.9.0</servicemix-spec.version>
 
