--- a/karaf-microservices/runtime/distribution/pom.xml
+++ b/karaf-microservices/runtime/distribution/pom.xml
@@ -29,7 +29,7 @@
     <name>Kamino :: Blog :: Tutorial :: Karaf microservices :: Runtime :: Distribution</name>
 
     <properties>
-        <karaf.runtime.version>4.3.0.RC1</karaf.runtime.version>
+        <karaf.runtime.version>4.3.2</karaf.runtime.version>
     </properties>
 
     <dependencies>
@@ -62,6 +62,13 @@
             <type>xml</type>
         </dependency>
         <dependency>
+            <groupId>org.apache.cxf.karaf</groupId>
+            <artifactId>apache-cxf</artifactId>
+            <version>${cxf.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
             <groupId>fr.openobject.blog.tutorial</groupId>
             <artifactId>karaf-microservices-runtime-features</artifactId>
             <version>${project.version}</version>
@@ -82,6 +89,7 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
+                <version>${karaf.version}</version>
                 <extensions>false</extensions>
                 <executions>
                     <execution>
@@ -111,6 +119,8 @@
                         <feature>deployer</feature>
                         <feature>diagnostic</feature>
                         <feature>scr</feature>
+                        <feature>cxf-jaxrs</feature>
+                        <feature>cxf-sse</feature>
                         <feature>karaf-microservices</feature>
                     </bootFeatures>
                     <installedFeatures>
@@ -130,7 +140,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>2.2.0</version>
                 <configuration>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <from>
