--- a/activemq-docker/pom.xml
+++ b/activemq-docker/pom.xml
@@ -31,7 +31,7 @@
     <name>Kamino :: Blog :: Tutorial :: ActiveMQ :: Docker</name>
 
     <properties>
-        <activemq.version>5.15.11</activemq.version>
+        <activemq.version>5.16.2</activemq.version>
     </properties>
 
     <build>
@@ -39,7 +39,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
                 <executions>
                     <execution>
                         <id>unpack-activemq</id>
@@ -65,7 +65,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>activemq</id>
@@ -84,10 +84,10 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <plugin> <!-- mvn compile jib:dockerBuild -->
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>3.1.3</version>
                 <configuration>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <from>
