--- a/karaf-custom-distribution/pom.xml
+++ b/karaf-custom-distribution/pom.xml
@@ -31,8 +31,8 @@
     <name>Kamino :: Blog :: Tutorial :: Karaf :: Custom distribution</name>
 
     <properties>
-        <karaf.runtime.version>4.3.1</karaf.runtime.version>
-        <decanter.version>2.2.0</decanter.version>
+        <karaf.runtime.version>4.3.2</karaf.runtime.version>
+        <decanter.version>2.7.0</decanter.version>
     </properties>
 
     <dependencies>
@@ -78,7 +78,7 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
-                <version>4.3.1</version>
+                <version>4.3.2</version>
                 <extensions>false</extensions>
                 <executions>
                     <execution>
@@ -126,10 +126,10 @@
                     <writeProfiles>true</writeProfiles>
                 </configuration>
             </plugin>
-            <plugin>
+            <plugin> <!-- mvn compile jib:dockerBuild -->
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>3.1.3</version>
                 <configuration>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <from>
