--- a/tomcat-docker/pom.xml
+++ b/tomcat-docker/pom.xml
@@ -109,7 +109,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.1.0</version>
+                <version>${jib.version}</version>
                 <configuration>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <from>
