--- a/karaf-microservices/runtime/distribution/pom.xml
+++ b/karaf-microservices/runtime/distribution/pom.xml
@@ -140,7 +140,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.1.3</version>
+                <version>${jib.version}</version>
                 <configuration>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <from>
