--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <slf4j.version>1.7.32</slf4j.version>
         <junit.version>5.8.2</junit.version>
         <surefire.log.level>INFO</surefire.log.level>
+
+        <jib.version>3.1.4</jib.version>
     </properties>
 
     <repositories>
