--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <module>kafka</module>
         <module>elasticsearch</module>
         <module>fusion</module>
+        <module>reactive</module>
     </modules>
 
     <dependencyManagement>
