Add Shiro jakarta sample

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <module>elasticsearch</module>
         <module>fusion</module>
         <module>reactive</module>
+        <module>shiro</module>
     </modules>
 
     <dependencyManagement>
